modules/lwjgl/nanovg/src/generated/java/org/lwjgl/nanovg/OUI.java


    /** {@code int uiFindItem(int item, int x, int y, unsigned int flags, unsigned int mask)} */
    public static native int uiFindItem(int item, int x, int y, @NativeType("unsigned int") int flags, @NativeType("unsigned int") int mask);

    // --- [ uiGetHandler ] ---

    /** {@code UIhandler uiGetHandler(void)} */
    public static native long nuiGetHandler();

    /** {@code UIhandler uiGetHandler(void)} */
    @NativeType("UIhandler")
    public static @Nullable UIHandler uiGetHandler() {
        return UIHandler.createSafe(nuiGetHandler());
    }

    // --- [ uiGetEvents ] ---

    /** {@code unsigned int uiGetEvents(int item)} */
    @NativeType("unsigned int")
    public static native int uiGetEvents(int item);

    // --- [ uiGetFlags ] ---

    /** {@code unsigned int uiGetFlags(int item)} */
    @NativeType("unsigned int")
    public static native int uiGetFlags(int item);

    // --- [ uiGetKey ] ---

    /** {@code unsigned int uiGetKey(void)} */
    @NativeType("unsigned int")
    public static native int uiGetKey();

    // --- [ uiGetModifier ] ---

    /** {@code unsigned int uiGetModifier(void)} */
    @NativeType("unsigned int")
    public static native int uiGetModifier();

    // --- [ uiGetRect ] ---

    /** {@code UIrect uiGetRect(int item)} */
    public static native void nuiGetRect(int item, long __result);

    /** {@code UIrect uiGetRect(int item)} */
    @NativeType("UIrect")
    public static UIRect uiGetRect(int item, @NativeType("UIrect") UIRect __result) {
        nuiGetRect(item, __result.address());
        return __result;
    }

    // --- [ uiContains ] ---

    /** {@code int uiContains(int item, int x, int y)} */
    public static native int nuiContains(int item, int x, int y);

    /** {@code int uiContains(int item, int x, int y)} */
    @NativeType("int")
    public static boolean uiContains(int item, int x, int y) {
        return nuiContains(item, x, y) != 0;
    }

    // --- [ uiGetWidth ] ---

    /** {@code int uiGetWidth(int item)} */
    public static native int uiGetWidth(int item);

    // --- [ uiGetHeight ] ---

    /** {@code int uiGetHeight(int item)} */
    public static native int uiGetHeight(int item);

    // --- [ uiGetLayout ] ---

    /** {@code unsigned int uiGetLayout(int item)} */
    @NativeType("unsigned int")
    public static native int uiGetLayout(int item);

    // --- [ uiGetBox ] ---

    /** {@code unsigned int uiGetBox(int item)} */
    @NativeType("unsigned int")
    public static native int uiGetBox(int item);

    // --- [ uiGetMarginLeft ] ---

    /** {@code short uiGetMarginLeft(int item)} */
    public static native short uiGetMarginLeft(int item);

    // --- [ uiGetMarginTop ] ---

    /** {@code short uiGetMarginTop(int item)} */
    public static native short uiGetMarginTop(int item);

    // --- [ uiGetMarginRight ] ---

    /** {@code short uiGetMarginRight(int item)} */
    public static native short uiGetMarginRight(int item);

    // --- [ uiGetMarginDown ] ---

    /** {@code short uiGetMarginDown(int item)} */
    public static native short uiGetMarginDown(int item);

    // --- [ uiRecoverItem ] ---

    /** {@code int uiRecoverItem(int olditem)} */
    public static native int uiRecoverItem(int olditem);

    // --- [ uiRemapItem ] ---

    /** {@code void uiRemapItem(int olditem, int newitem)} */
    public static native void uiRemapItem(int olditem, int newitem);

    // --- [ uiGetLastItemCount ] ---

    /** {@code int uiGetLastItemCount(void)} */
    public static native int uiGetLastItemCount();

}